# SLICK

./: .gitignore  Cargo.toml  Cargo_cli.toml  Cargo_web.toml  README.md  TODO.md  build_cli.sh  build_web.sh  test.txt
.github/workflows/: build.yml  package.yml  rust.yml
cli/: main.rs
cli/core/: crypt.rs  file.rs  key.rs
core/: crypt.rs  key.rs  mod.rs
docs/: algorithm.md  install.md  usage.md
scr/: time.gp  time.sh
src/: main.rs
src/core/: conf.rs  key.rs  mod.rs  perm.rs
src/tasks/: crypt.rs  crypt.rs.bak  file.rs  key.rs  mod.rs
src/test/: mod.rs
web/: index.html  main.rs
