[package]
name = "slick2"
version = "0.1.0"
authors = ["Michael Bednarek <mbednarek360@protonmail.com>"]
edition = "2018"
description = "Fast and Slick Symmetric Cipher"
repository = "https://github.com/mbednarek360/SLICK2"
license = "MPL-2.0"

[dependencies]
ethereum-types = "^0.9.2"
rand = "^0.7.3"
blake3 = "^0.3.6"
clap = "^2.33.3"
